# spocs

./: .dockerignore  .gitignore  AUTHORS  COPYING  ChangeLog  Dockerfile  INSTALL  Makefile.am  NEWS  README  README.md  bootstrap.sh  config.h.in  configure.ac  rebuild_from_scratch.sh  run_cliques.sh  test-spocs.sh
conf/: bootstrap.js  bootstrap_clique.js  bootstrap_report.js  bootstrap_subgraph.js  force.css  force.js  get_colors.js  javascript.js  jquery-ui-1.9.2.custom.min.css  report.js  search.js  search_init.js  style.css  visualsearch.css
conf/css/cupertino/: jquery-ui-1.9.2.custom.css  jquery-ui-1.9.2.custom.min.css
config/: config.h  config.h.in  config.status  configure  configure.ac
config/m4/: ax_boost_regex.m4  ax_boost_serialization.m4  ax_spocs_version.m4
data/output/: gold4_metadata.csv
data/output/gold4_fasta/: E_coli_K12_MG1655.fasta  OUTGROUP_M_thermoautotrophicus_DeltaH.fasta  S_enterica_Typhi_CT18.fasta  S_enterica_Typhimurium_LT2.fasta  Y_pestis_KIM10.fasta
data/output/gold4_out_dir/: E_coli_K12_MG1655-E_coli_K12_MG1655.blastout  E_coli_K12_MG1655-OUTGROUP_M_thermoautotrophicus_DeltaH.blastout  E_coli_K12_MG1655-S_enterica_Typhi_CT18.blastout  E_coli_K12_MG1655-S_enterica_Typhimurium_LT2.blastout  E_coli_K12_MG1655-Y_pestis_KIM10.blastout  S_enterica_Typhi_CT18-E_coli_K12_MG1655.blastout  S_enterica_Typhi_CT18-OUTGROUP_M_thermoautotrophicus_DeltaH.blastout  S_enterica_Typhi_CT18-S_enterica_Typhi_CT18.blastout  S_enterica_Typhi_CT18-S_enterica_Typhimurium_LT2.blastout  S_enterica_Typhi_CT18-Y_pestis_KIM10.blastout  S_enterica_Typhimurium_LT2-E_coli_K12_MG1655.blastout  S_enterica_Typhimurium_LT2-OUTGROUP_M_thermoautotrophicus_DeltaH.blastout  S_enterica_Typhimurium_LT2-S_enterica_Typhi_CT18.blastout  S_enterica_Typhimurium_LT2-S_enterica_Typhimurium_LT2.blastout  S_enterica_Typhimurium_LT2-Y_pestis_KIM10.blastout  Y_pestis_KIM10-E_coli_K12_MG1655.blastout  Y_pestis_KIM10-S_enterica_Typhi_CT18.blastout  Y_pestis_KIM10-S_enterica_Typhimurium_LT2.blastout  Y_pestis_KIM10-Y_pestis_KIM10.blastout
data/ref/: gold4_cliques.report
node/spocs-gui/: app.js  package.json  runner.js
node/spocs-gui/routes/: index.js
node/spocs-gui/views/: index.pug
src/: Alignments.cpp  Alignments.hpp  AlignmentsCollection.cpp  AlignmentsCollection.hpp  BlastRunner.cpp  BlastRunner.hpp  Clique.cpp  Clique.hpp  CliqueRunner.cpp  CliqueRunner.hpp  Cluster.cpp  Cluster.hpp  Clusters.cpp  Clusters.hpp  Exception.hpp  FastaReader.cpp  FastaReader.hpp  FastaSequence.cpp  FastaSequence.hpp  HtmlReport.cpp  HtmlReport.hpp  InparaParser.cpp  InparaParser.hpp  Lookup.cpp  Lookup.hpp  Makefile.am  Metadata.cpp  Metadata.hpp  Ortholog.cpp  Ortholog.hpp  OutputHelper.cpp  OutputHelper.hpp  ProgramOptions.cpp  ProgramOptions.hpp  README.txt  ReportRipper.cpp  ReportRipper.hpp  Solver.cpp  Solver.hpp  Subgraph.cpp  (+6 more)
src/test/: Makefile.am  README.txt  reverse_check.pl  t_Alignments.cpp  t_AlignmentsCollection.cpp  t_BlastRunner.cpp  t_Clique.cpp  t_CliqueRunner.cpp  t_Cluster.cpp  t_Clusters.cpp  t_FastaReader.cpp  t_FastaSequence.cpp  t_HtmlReport.cpp  t_InparaParser.cpp  t_Lookup.cpp  t_Metadata.cpp  t_Ortholog.cpp  t_OutputHelper.cpp  t_ProgramOptions.cpp  t_ReportRipper.cpp  t_Solver.cpp  t_Subgraph.cpp  t_osUtil.cpp  utilities.hpp
support/: boost_install_script.sh
support/mpi/: Makefile  big33.tasks  big8.tasks  doith.cpp  doith.sbatch  spocs.sbatch
test/: Makefile.am  t_Alignments.cpp  utilities.hpp
